# quake4sdk

./: cmake_linux.sh  cmake_msvc2019.cmd  cmake_msvc2022.cmd  cmake_msvc2026.cmd
source/: CMakeLists.txt
source/aas/: AASFile.h
source/bse/: BSEInterface.h
source/framework/: CVarSystem.h  CmdSystem.h  Common.h  DeclPlayerModel.h  File.h  FileSystem.h  UsercmdGen.h  declLipSync.h  declManager.h  declPlayback.h  licensee.h
source/game/: Actor.cpp  Actor.h  CMakeLists.txt  Camera.cpp  Camera.h  Effect.cpp  Effect.h  Entity.cpp  Entity.h  FreeView.cpp  FreeView.h  Game.h  Game_Debug.h  Game_Log.cpp  Game_Log.h  Game_local.cpp  Game_local.h  Game_network.cpp  Healing_Station.cpp  Healing_Station.h  Icon.cpp  IconManager.cpp  Instance.cpp  Item.cpp  Item.h  Light.cpp  Light.h  LipSync.cpp  LipSync.h  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  MultiplayerGame.cpp  MultiplayerGame.h  Playback.cpp  Player.cpp  Player.h  PlayerView.cpp  (+15 more)
source/game/ai/: AAS.cpp  AAS.h  AAS_local.h  AAS_tactical.h  AI_Actions.cpp  AI_Debug.cpp  AI_Manager.h  AI_Medic.cpp  AI_Medic.h  AI_Tactical.h  AI_Util.cpp  Monster_Berserker.cpp  Monster_BossBuddy.cpp  Monster_BossMakron.cpp  Monster_ConvoyGround.cpp  Monster_ConvoyHover.cpp  Monster_FailedTransfer.cpp  Monster_Fatty.cpp  Monster_Gladiator.cpp  Monster_Grunt.cpp  Monster_Gunner.cpp  Monster_Harvester.cpp  Monster_HarvesterDispersal.cpp  Monster_HeavyHoverTank.cpp  Monster_IronMaiden.cpp  Monster_LightTank.cpp  Monster_NetworkGuardian.cpp  Monster_RepairBot.cpp  Monster_Scientist.cpp  Monster_Sentry.cpp  Monster_SlimyTransfer.cpp  Monster_StreamProtector.cpp  Monster_StroggFlyer.cpp  Monster_StroggHover.cpp  Monster_StroggMarine.cpp  Monster_TeleportDropper.cpp  Monster_Turret.cpp  Monster_TurretFlying.cpp  VehicleAI.cpp
source/game/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp  Anim_Import.cpp  Anim_Testmodel.cpp
source/game/client/: ClientAFEntity.h  ClientEffect.cpp  ClientEffect.h  ClientEntity.h  ClientModel.cpp  ClientModel.h  ClientMoveable.cpp  ClientMoveable.h
source/game/gamesys/: Class.cpp  Event.cpp  SaveGame.cpp  SaveGame.h  State.cpp  SysCmds.cpp  SysCvar.cpp  SysCvar.h
source/game/mp/: CTF.cpp  GameState.cpp  GameState.h  Tourney.cpp  Tourney.h
source/game/physics/: Clip.cpp  Clip.h  Force_Constant.cpp  Physics_AF.cpp  Physics_Base.cpp  Physics_Base.h  Physics_Monster.h  Physics_Particle.cpp  Physics_Player.cpp  Physics_Player.h  (+5 more)
source/idlib/: BitMsg.cpp  BitMsg.h  CMakeLists.txt  Dict.cpp  Dict.h  Heap.cpp  Heap.h  LangDict.cpp  Lexer.cpp  Lexer.h  LexerFactory.cpp  Lib.cpp  Lib.h  Parser.cpp  Str.cpp  Str.h  TextCompiler.h  TimingCollection.cpp  mapfile.cpp  precompiled.h  rvHeap.cpp  rvHeap.h  rvHeapArena.cpp  rvHeapArena.h  rvMemSys.cpp  rvMemSys.h
source/mpgame/: AF.cpp  AFEntity.cpp  Actor.cpp  CMakeLists.txt  Effect.cpp  Entity.cpp  Entity.h  GameEdit.cpp  Game_Debug.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  IK.cpp  IK.h  Instance.cpp  Instance.h  Item.cpp  Item.h  Lagometer.cpp  Misc.cpp  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerView.cpp  PlayerView.h  Player_States.cpp  Projectile.cpp  Projectile.h  Pvs.cpp  SplineMover.cpp  SplineMover.h  Target.cpp  Target.h  Trigger.cpp  Weapon.cpp
source/renderer/: Cinematic.h  Material.h  Model.h  RenderSystem.h  RenderWorld.h  glext.h  qgl.h
source/sound/: sound.h
source/sys/: sys_public.h
source/ui/: UserInterface.h
(+147 files in other folders)
